# sqlc-python-asyncpg

./: Cargo.toml  Makefile  README.md  schema.sql  sqlc.yaml
src/: main.rs  method.rs  method_builder.rs  mock.rs  model.rs  model_file.rs  model_file_generator.rs  model_files.rs  normalization.rs  options.rs  proto.rs  python_type.rs  query.rs  query_class.rs  response_builder.rs  table.rs  traits.rs  utils.rs
templates/: method.py.jinja2  model_file.py.jinja2  model_init.py.jinja2  queries.py.jinja2
test/: user.sql
test/query/: queries.py
test/query/models/: __init__.py  pg_temp.py  public.py  user.py
tutorial/: db.go  foo.sql.go  models.go  user.sql.go
