[package]
name = "sqlc-python-asyncpg"
version = "0.1.0"
authors = ["Tomás Vallotton <tvallotton@uc.cl>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
prost = "0.9.0"
bytes = "1.1.0"
minijinja = "2.10.2"
regex = "1.11.1"

[build-dependencies]
prost-build = "0.9.0"
